apps/metatube/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: metatube
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: metatube
      app.kubernetes.io/name: metatube
  serviceName: metatube
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: metatube
        app.kubernetes.io/name: metatube
    spec:
      containers:
        - name: metatube
          image: metatube
          args:
            - -dsn
            - /data/metatube.db
          livenessProbe:
            initialDelaySeconds: 60
            tcpSocket:
              port: http
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: http
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            tcpSocket:
              port: http
            timeoutSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 25m
              memory: 250Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
