apps/metatube/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metatube
spec:
  rules:
    - backendRefs:
        - name: metatube
          port: http
